# NFTool

./: .coverage  .cursorrules  .env.example  .gitattributes  .gitignore  .trivyignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  NFTool_Manual_060525.html  NFTool_V3_071125A.py  README.md  SOW_NFTool_McPherson.docx  TAURI_IMPLEMENTATION.md  TECHNICAL.md  TODO.md  backend-dockle.sarif  backend.sarif  docker-compose.yml  frontend-dockle.sarif  frontend.sarif  get-latest-logs.sh  headless_runner.py  main.py  nftool-chat.md  package.json  pyrightconfig.json  requirements.txt  start_api.sh  test_snr.py  trivy-config.sarif
.cursor/commands/: autonomous-ui-testing.md  iteration.md
.cursor/plans/: interactive_ui_browser_testing_e24d750d.plan.md  repository_reorganization_and_cleanup_479e4443.plan.md
.cursor/rules/: brin-up.mdc  structure.mdc
.github/workflows/: deploy_windows.yml
.hypothesis/constants/: 0960fc03fbfa4482  097a2ab41f85da5b  0d4fc74ccac073fd  0f396b29549e35da  2c6b2f8126774dee  3085ef5141e54c07  3534f655f2fa270d  5cd015866cac1bdc  5d4aab2e1cb662de  608860f485c4bbd4  6dc4e032bbc953ae  (+25 more)
backend/: Dockerfile.backend  pyproject.toml  requirements.txt  run_tauri.py  run_windows.py
data/: sample_predictors.csv  sample_targets.csv
frontend/: .eslintcache  Dockerfile.frontend  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: api_autopilot_test.py  debug_leakage.py  headless_runner.py  legacy_main.py
src/: api.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+68 files in other folders)
